--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,36 @@
     padding: 0;
     box-sizing: border-box;
   }
-  
+  a {
+    z-index: 10000; /* Adjust as needed, should be higher than the cursor's z-index */
+    pointer-events: auto;
+    transition: color 0.3s ease;
+    position: relative; /* z-index only works on positioned elements (position:absolute, position:relative, or position:fixed) */
+  }  
   /* Ensure full height */
   html, body {
     height: 100%;
+  }
+  
+  .cursor-dot,
+  .cursor-dot-outline {
+      margin: auto;
+      justify-content: center;
+      pointer-events: none;
+      position: relative;
+      top: 50%;
+      left: 50%;
+      border-radius: 50%;
+      z-index: -1;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, border 0.3s ease-in-out;
+  }
+
+  .cursor-dot {
+    @apply w-3 h-3 bg-[#F1838B] rounded-full border-none;
+    
+  }
+  
+  .cursor-dot-outline {
+    @apply w-10 h-10 border-2 border-transparent bg-transparent rounded-full;
   }
