always more to accomplish

--- a/src/components/TogglerStyles.css
+++ b/src/components/TogglerStyles.css
@@ -6,6 +6,7 @@
 	--dark: #351919;
 	--body: #251418;
 	--alt: #ff949d;
+    --buttonhover: #f9fd00;
 }
 
 * {
@@ -306,24 +307,24 @@ h3 {
 }
 
 .button {
-	background: var(--body);
-	max-width: max-content;
-	display: inline-block;
-	font-weight: bold;
-	border: 1px solid transparent;
-	color: var(--light);
-	text-decoration: none;
-	text-transform: uppercase;
-	letter-spacing: 0.05em;
-	padding: 0.5em 1em;
-	border-radius: 3px;
-	box-shadow: 0.2em 0.2em 0.2em 0.1em inset var(--dark), 0.2em 0.2em 0.2em rgba(0,0,0,0.25);
-	transition: all 0.2s steps(2);
+    background: var(--body);
+    max-width: max-content;
+    display: inline-block;
+    font-weight: bold;
+    border: 1px solid transparent;
+    color: var(--buttonhover);
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    padding: 0.5em 1em;
+    border-radius: 3px;
+    box-shadow: 0.2em 0.2em 0.2em 0.1em inset var(--light), 0.2em 0.2em 0.2em rgba(238, 255, 0, 0.39);
+    transition: all 0.2s steps(2);
 }
 
 .button:hover {
-	color: var(--bg);
-	background: var(--dark);
+	color: var(--light);
+	background: var(--buttonhover);
 	box-shadow: -0.2em -0.2em 0.2em 0.1em inset var(--body), 0.2em 0.2em 0.2em rgba(0,0,0,0.25);
 }
 
