--- a/src/components/TogglerStyles.css
+++ b/src/components/TogglerStyles.css
@@ -1,4 +1,3 @@
-
 :root {
 	--bg: #595080;
 	--box:#b46f7523;
@@ -357,6 +356,7 @@ h3 {
 	top: 0;
 	width: 18px;
 	left: calc(50% - 9px);
+    cursor: pointer; /* Added to make the screw clickable */
 }
 
 .screw::after,
@@ -390,7 +390,10 @@ h3 {
 	left: 20px;
 }
 
-
+.screw.rotated {
+  transform: rotate(90deg);
+  transition: transform 0.3s ease-in-out; /* Smooth transition */
+}
 
 .open-left {
   position: relative;
