--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,36 +1,45 @@
+.cursor-wrapper {
+  position: fixed;
+  pointer-events: none;
+  z-index: 9999;
+  mix-blend-mode: difference;
+}
+
+.main-cursor {
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 9999;
+}
+
+/*other globals*/
 .home {
   padding: 75px 25px;
   max-width: 800px;
   margin: 0 auto;
 }
-
 .home p {
   line-height: 1.5;
 }
-
 .home a {
   text-decoration: underline;
 }
-
 .title {
   text-align: center;
   margin-bottom: 50px;
 }
-
 .title h1 {
   margin: 15px 0 0;
 }
-
 .title p {
   font-weight: 200;
   margin: 0;
 }
-
 .title img {
   height: 125px;
   width: 125px;
 }
-
 .links {
   margin-top: 50px;
   text-align: center;
